test/visibility/rename/renameUsedMod/renamePublicUse3.good
renamePublicUse3.chpl:12: In function 'main':
renamePublicUse3.chpl:15: error: 'Foo' undeclared (first use this function)
